Se agrega el proyecto

--- a/sass/base/extends/_flexbox.scss
+++ b/sass/base/extends/_flexbox.scss
@@ -49,3 +49,18 @@
 %display-none{
     display: none;
 }
+
+
+%display-aling{
+    display: flex;
+    align-items: center;
+}
+
+
+%display-space{
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
