--- a/sass/base/extends/_text.scss
+++ b/sass/base/extends/_text.scss
@@ -8,3 +8,13 @@
 %text-tranform{
     text-transform: uppercase;
 }
+
+
+%text-center{
+    text-align: center;
+}
+
+%text-line{
+    text-decoration: line-through;
+}
+
