--- a/sass/base/listas/_fontsize.scss
+++ b/sass/base/listas/_fontsize.scss
@@ -1,11 +1,20 @@
 
 $fontsize:
-20px,
-50px,
-60px,
-15px,
-48px,
-13px,
-30px,
-26px,
-17px;
+20px,   //1
+50px,   //2
+60px,   //3
+15px,   //4
+48px,   //5
+13px,   //6
+30px,   //7
+26px,   //8
+17px,   //9
+18px,   //10
+200px,  //11
+2rem,   //12
+0.8rem, //13
+28,     //14
+14,      //15
+325px,   //16
+17px,   //17
+
