--- a/sass/base/variables/_colors.scss
+++ b/sass/base/variables/_colors.scss
@@ -5,7 +5,10 @@ $bg-primario:black;
 $bg-secundario:white;
 $bg-tercero:#4d4d4f;
 $bg-cuarto:goldenrod;
-$bg-quinto:#4d4d4f;
+$bg-quinto:#2a2c41;
 $bg-sexto:#74c54f;
 $bg-septimo:#e8e925;
 $bg-octavo:gold;
+$bg-noveno:rgba(234, 240, 246, 0.1);
+
+
