--- a/sass/base/extends/_grid.scss
+++ b/sass/base/extends/_grid.scss
@@ -3,3 +3,10 @@
 %display-grid{
     display: grid
 }
+
+
+%grid-one{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-rows: auto 1.5fr 1fr;
+}
