--- a/sass/base/extends/_wh.scss
+++ b/sass/base/extends/_wh.scss
@@ -24,6 +24,15 @@
 }
 
 %wh-cuarto{
-width: 100%;
-height: 600PX;
+    width: 100%;
+    height: 600PX;
+}
+
+
+%wh-only-porcentaje{
+    width: 100%;
+}
+
+%wh-only-px{
+    width: 100px;
 }
