--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,8 +3,9 @@
 
 footer{
 
-    width: 100%;
-    background-color:$bg-tercero;
+    @extend %wh-porcentaje-100;
+    background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.25) 200%);
+    font-family: $ff-principal;
 
     .grupo-1{
 
@@ -31,7 +32,7 @@ footer{
                 font-size: nth($fontsize, 1 );
             }
 
-            h6{
+            h3{
                 color: $bg-secundario;
                 margin-bottom: 25px;
                 font-size:nth($list: fontsize, $n:1 ) ;
@@ -48,7 +49,7 @@ footer{
             .redsocial{
 
                 @extend %display-flex;
-                width: 100px;
+                @extend %wh-only-px;
                 line-height: 45px;
                 margin-right: 10px;
             }
@@ -57,10 +58,13 @@ footer{
 }
 
 
-.box{
+.grupo-1 .container-logo{
+
+    @extend %flex-center;
+
     figure{
         .imagenfooter{
-            width: 100px;
+            @extend %wh-px-100;
             border-radius:150px;
         }
     }
@@ -73,7 +77,7 @@ footer{
     background-color: $bg-primario;
     color: $bg-secundario;
     padding: 15px 10px;
-    text-align: center;
+    @extend %text-center;
 
      small{
 
@@ -89,4 +93,17 @@ footer{
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 30px;
         padding: 35px 0px;
-}}
+
+
+            .container-logo{
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding-right: 30px;
+            }
+
+
+    }
+
+}
