--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,62 +1,49 @@
 
-
-.large-header {
-	position: relative;
-	width: 100%;
-	height: 600PX;
-	overflow: hidden;
-	background-size: cover;
-	background-position: center center;
-	background-image: url(/img/Imagen-Fondo.jpg);
-}
+body{
 
 
-
-.header-services{
-	position: relative;
-	@extend %wh-cuarto;
-	overflow: hidden;
-	background-size: cover;
-	background-position: center center;
-	background-image: url(/img/Fondo-servicios.jpg);
-	opacity: 0.8;
-}
+	.large-header {
+		@include header;
+		background-image: url(/img/Imagen-Fondo.jpg);
+		opacity: 0.8;
+	}
 
 
-.header-about{
-	position: relative;
-	@extend %wh-cuarto;
-	overflow: hidden;
-	background-size: cover;
-	background-position: center center;
-	background-image: url(/img/Fondo-about.jpg);
-	opacity: 0.9;
-}
+	.header-services{
+		@include header;
+		background-image: url(/img/Fondo-servicios.jpg);
+	}
+	
+	
+	.header-about{
+		@include header;
+		background-image: url(/img/Fondo-about.jpg);
 
-
-.header-contact{
-	position: relative;
-	@extend %wh-cuarto;
-	overflow: hidden;
-	background-size: cover;
-	background-position: center center;
-	background-image: url(/img/Fondo-contacto.jpg);
-	opacity: 0.9;
+		
+	}
+	
+	
+	.header-contact{
+		@include header;
+		background-image: url(/img/Fondo-contact.jpg);
+	
+		
+	}
 }
 
 
 .main-title {
 	font-family: $ff-principal;
-	position: absolute;
+	position: map-get($position, absolute );
 	margin: 0;
 	padding: 0;
 	color: $bg-secundario;
-	text-align: center;
+	@extend %text-center;
 	top: 50%;
 	left: 50%;
 	-webkit-transform: translate3d(-50%,-50%,0);
 	transform: translate3d(-50%,-50%,0);
-	font-size: 50px;
+	font-size: nth($fontsize, 2 );
 	
 }
 
