--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -14,15 +14,15 @@ body{
 
         .app-title{
 
-            @extend %display-flex;
-            flex-direction: column;
-            position: relative;
+            @extend %flex-cuarto;
+            position:map-get($position, relative );
             color: $bg-secundario;
-            font-size: 26px;
+            font-size: nth($fontsize, 8 );
+            padding-top: 50px;
 
             &:after{
                 display: block;
-                position: absolute;
+                position:map-get($position, absolute );
                 left: 0;
                 bottom: -10px;
                 width: 25px;
@@ -30,26 +30,22 @@ body{
                 background: $bg-secundario;
             }
 
-            .logocontacto{
-
-                @extend %wh-px-100;
-                @extend %flex-center;
-                color: $bg-secundario;
-                margin-top: 10px;
-                margin-left: 20px;
-                border-radius: 150px;
-              
+            span{
+              font-family: $ff-principal;
+              font-weight: 600;
+            
             }
+
         }
     }
 }
+
 
 
 body{
     button{
         input{
 
-            font-family: $ff-principal;
             font-weight: 700;
             letter-spacing: 1.4px;
         }
@@ -66,14 +62,14 @@ body{
 
     .screen{
 
-        position: relative;
-        background: $bg-primario;
+        position:map-get($position, relative );
+        background-image: linear-gradient(to right, #868f96 0%, #596164 100%);
         border-radius: 15px;
 
         &:after{
             
             display: block;
-            position: absolute;
+            position:map-get($position, absolute );
             top: 0;
             left: 20px;
             right: 20px;
@@ -90,8 +86,7 @@ body{
 
 .screen-header{
 
-    display: flex;
-    align-items: center;
+    @extend %display-aling;
     padding: 10px 20px;
     background: $bg-tercero;
     border-top-left-radius: 15px;
@@ -127,6 +122,13 @@ body{
     }
 }
 
+.app-form-control{
+  font-family: $ff-principal;
+}
+
+.app-form-button{
+  font-family: $ff-principal;
+}
 
 .screen-header-right{
     
@@ -151,128 +153,163 @@ body{
     @extend %display-flex;
 
     .screen-body-item{
-
         flex: 1;
         padding: 50px;
 
+
+
+        
+          .app-form-group{
+            margin-bottom: 15px;
+    
+
+
+            .message {
+              margin-top: 40px;
+            
+            }
+
+            .buttons {
+              margin-bottom: 0;
+              text-align: right;
+            
+            }
+            
+            .app-form-control {
+              @extend %wh-only-porcentaje;
+              padding: 10px 0;
+              @include background-none;
+              border: none;
+              border-bottom: 1px solid $bg-secundario;
+              color: $bg-secundario;
+              font-size: nth($fontsize, 6 );
+              @extend %text-tranform;
+              outline: none;
+              transition: border-color .2s;
+              
+
+
+                    &::placeholder{
+
+                      color: $bg-tercero;
+                      font-size: 10px;
+                   
+
+                    }
+
+
+                    &:focus{
+
+                      border-bottom-color: $bg-tercero;
+
+                    }
+            }
+
+          }
+
+
+          .app-form-button {
+            @include background-none;
+            border: none;
+            color: $bg-secundario;
+            font-size: nth($fontsize, 6 );
+            cursor: pointer;
+            outline: none;
+
+
+              &:hover{
+
+                color: $bg-cuarto;
+              }
+
+          }
+
     }
+
+      .screen-body-item.left{
+
+        @extend %flex-quinto;
+      
+      }
 }
 
 
-.screen-body-item.left{
-
-@extend %flex-quinto;
-
-}
-
-
-.app-form-group{
-    margin-bottom: 15px;
-}
-
-.app-form-group.message {
-    margin-top: 40px;
-  }
-
-
-
-.app-form-group.buttons {
-    margin-bottom: 0;
-    text-align: right;
-}
-
-.app-form-control {
-    width: 100%;
-    padding: 10px 0;
-    background: none;
-    border: none;
-    border-bottom: 1px solid $bg-tercero;
-    color: $bg-secundario;
-    font-size: nth($fontsize, 6 );
-    text-transform: uppercase;
-    outline: none;
-    transition: border-color .2s;
-  }
-  
-  .app-form-control::placeholder {
-    color: $bg-tercero;
-  }
-  
-  .app-form-control:focus {
-    border-bottom-color: $bg-secundario;
-  }
-  
-  .app-form-button {
-    background: none;
-    border: none;
-    color: $bg-secundario;
-    font-size: nth($fontsize, 6 );
-    cursor: pointer;
-    outline: none;
-  }
-  
-  .app-form-button:hover {
-    color: $bg-cuarto;
-  }
-  
-  
   .dribbble {
     width: 20px;
     height: 20px;
     margin: 0 5px;
   }
-  
-  @media screen and (max-width: 520px) {
-    .screen-body {
-      flex-direction: column;
-    }
-  
-    .screen-body-item.left {
-      margin-bottom: 30px;
-    }
-  
-    .app-title {
-      flex-direction: row;
-    }
-  
-    .app-title span {
-      margin-right: 12px;
-    }
-  
-    .app-title:after {
-      display: none;
-    }
-  }
-  
-  @media screen and (max-width: 600px) {
-    .screen-body {
-      padding: 40px;
-    }
-  
-    .screen-body-item {
-      padding: 0;
-    }
-  }
-  
+
   .body-contact{
-    background-image: url(/img/Imagen-Fondo-2.jpg);
+    background-image: linear-gradient(315deg, #2a2c41, #959991)
   }
 
   .float{
-    position:fixed;
+    position:map-get($position,fixed );
     width:60px;
     height:60px;
     bottom:40px;
     right:40px;
-    background-color:#25d366;
+    background-color:$bg-primario;
     color:$bg-secundario;
     border-radius:50px;
-    text-align:center;
-    font-size:30px;
-    box-shadow: 2px 2px 3px $bg-tercero;
+    @extend %text-center;
+    font-size:nth($fontsize, 7 );
+    box-shadow: 2px 2px 3px $bg-secundario;
     z-index:100;
   }
   
   .my-float{
     margin-top:16px;
   }
+  
+  @media screen and (max-width: 520px) {
+    .screen-body {
+      flex-direction: column;
+
+          .screen-body-item.left {
+            margin-bottom: 30px;
+
+            .app-title {
+              flex-direction: row;
+
+
+              &::after{
+                display: none;
+              } 
+
+
+              span {
+                margin-right: 12px;
+              }
+
+            }
+
+          }
+    }
+  
+  }
+  
+
+
+
+  @media screen and (max-width: 600px) {
+    .screen-body {
+      padding: 10px;
+
+      .screen-body-item {
+        padding: 0;
+      }
+
+      .app-title{
+        span{
+          font-size: 16px;
+          text-align: center;
+          padding-left: 9px;
+        }
+      }
+    }
+  
+  }
+  
+  
