--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@100&family=Urbanist:wght@100&display=swap');
+
 
 @import 'pages/home';
 @import 'pages/services';
 @import 'pages/about';
 @import 'pages/contact';
+@import 'pages/products';
 
 @import 'components/footer';
 @import 'components/navbar';
@@ -17,4 +20,5 @@
 @import 'base/listas/fontsize';
 @import 'base/variables/colors';
 @import 'base/variables/fuentes';
-
+@import 'base/mixins/mixins';
+@import 'base/mapas/mapas';
